--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="logo-type" href="./index.html">Web<span class="logo-studio">Studio</span></a>
                 <ul class="menu">
                     <li><a class="menu-item-link link-studio" href="./index.html">Studio</a></li>
-                    <li><a class="menu-item-link link-nav" href="">Portfolio</a></li>
+                    <li><a class="menu-item-link link-nav" href="/index.html#portfolio">Portfolio</a></li>
                     <li><a class="menu-item-link link-nav" href="">Contacts</a></li>
                 </ul>
             </nav>
@@ -47,38 +47,46 @@
             <h2 class="visually-hidden">Benefits</h2>
             <ul class="menu-benefits">
                 <li class="menu-item-benefits">
+                    <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
                         <svg class="benefits-icon" width="64"; height="64";>
-                            <use href="/images/symbol-defs.svg#icon-strategy-icon"></use>
+                            <use href="/images/icons.svg#icon-strategy-icon"></use>
                         </svg>
                     </a>
+                    </div>
                     <h3 class="item-title-benefits">Strategy</h3>
                     <p class="item-text-benefits">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li class="menu-item-benefits">
+                    <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
                         <svg class="benefits-icon" width="64" ; height="64" ;>
-                            <use href="/images/symbol-defs.svg#icon-punctuality-icon"></use>
+                            <use href="/images/icons.svg#icon-punctuality-icon"></use>
                         </svg>
                     </a>
+                    </div>
                     <h3 class="item-title-benefits">Punctuality</h3>
                     <p class="item-text-benefits">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="menu-item-benefits">
+                    <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
                         <svg class="benefits-icon" width="64" ; height="64" ;>
-                            <use href="/images/symbol-defs.svg#icon-diligence-icon"></use>
+                            <use href="/images/icons.svg#icon-diligence-icon"></use>
                         </svg>
                     </a>
+                </div>
                     <h3 class="item-title-benefits">Diligence</h3>
                     <p class="item-text-benefits">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="menu-item-benefits">
+                    <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
                         <svg class="benefits-icon" width="64" ; height="64" ;>
-                            <use href="/images/symbol-defs.svg#icon-tech-icon"></use>
+                            <use href="/images/icons.svg#icon-tech-icon"></use>
                         </svg>
                     </a>
+                    </div>
                     <h3 class="item-title-benefits">Technologies</h3>
                     <p class="item-text-benefits">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -99,28 +107,28 @@
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-instagram-icon"></use>
+                                        <use href="./images/icons.svg#icon-instagram-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-twitter-icon"></use>
+                                        <use href="./images/icons.svg#icon-twitter-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-facebook-icon"></use>
+                                        <use href="./images/icons.svg#icon-facebook-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-linkedin-icon"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -132,32 +140,32 @@
                         <div class="team-worker">
                         <h3 class="item-title-team">Tom Ford</h3>
                         <p class="item-text-team">Frontend Developer</p>
-                                                <ul class="menu-social-icon">
+                        <ul class="menu-social-icon">
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-instagram-icon"></use>
+                                        <use href="./images/icons.svg#icon-instagram-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-twitter-icon"></use>
+                                        <use href="./images/icons.svg#icon-twitter-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-facebook-icon"></use>
+                                        <use href="./images/icons.svg#icon-facebook-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-linkedin-icon"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -173,28 +181,28 @@
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-instagram-icon"></use>
+                                        <use href="./images/icons.svg#icon-instagram-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-twitter-icon"></use>
+                                        <use href="./images/icons.svg#icon-twitter-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-facebook-icon"></use>
+                                        <use href="./images/icons.svg#icon-facebook-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-linkedin-icon"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -210,28 +218,28 @@
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-instagram-icon"></use>
+                                        <use href="./images/icons.svg#icon-instagram-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-twitter-icon"></use>
+                                        <use href="./images/icons.svg#icon-twitter-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-facebook-icon"></use>
+                                        <use href="./images/icons.svg#icon-facebook-icon"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="item-social-icon">
                                 <a href="" class="link-social-icon">
                                     <svg class="social-list-icon" width="16" height="16">
-                                        <use href="/images/symbol-defs.svg#icon-linkedin-icon"></use>
+                                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -242,7 +250,7 @@
             </div>
         </section>
                                 <!--PORTFOLIO--->
-        <section class="page-portfolio content-padding">
+        <section id="portfolio" class="page-portfolio content-padding">
             <div class="container">
             <h2 class="main-title">Our Portfolio</h2>
             <ul class="menu-portfolio">
@@ -326,33 +334,33 @@
         </p>
         </div>
         <div class="footer-social">
-        <h3 class="title-footer">Social media</h3>
+        <p class="footer-social-text">Social media</p>
         <ul class="footer-menu-social-icon">
             <li class="footer-social-icon">
                 <a href="" class="footer-link-social-icon">
-                    <svg class="social-list-icon" width="16" height="16">
-                        <use href="/images/symbol-defs.svg#icon-instagram-icon"></use>
+                    <svg class="social-list-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram-icon"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-icon">
                 <a href="" class="footer-link-social-icon">
-                    <svg class="social-list-icon" width="16" height="16">
-                        <use href="/images/symbol-defs.svg#icon-twitter-icon"></use>
+                    <svg class="social-list-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter-icon"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-icon">
-                <a href="" class="link-social-icon">
-                    <svg class="footer-social-list-icon" width="16" height="16">
-                        <use href="/images/symbol-defs.svg#icon-facebook-icon"></use>
+                <a href="" class="footer-link-social-icon">
+                    <svg class="social-list-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook-icon"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-icon">
-                <a href="" class="link-social-icon">
-                    <svg class="footer-social-list-icon" width="16" height="16">
-                        <use href="/images/symbol-defs.svg#icon-linkedin-icon"></use>
+                <a href="" class="footer-link-social-icon">
+                    <svg class="social-list-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin-icon"></use>
                     </svg>
                 </a>
             </li>
