--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
-                        <svg class="benefits-icon" width="64"; height="64";>
+                        <svg class="benefits-icon" width="64" height="64">
                             <use href="/images/icons.svg#icon-strategy-icon"></use>
                         </svg>
                     </a>
@@ -60,7 +60,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
-                        <svg class="benefits-icon" width="64" ; height="64" ;>
+                        <svg class="benefits-icon" width="64" height="64">
                             <use href="/images/icons.svg#icon-punctuality-icon"></use>
                         </svg>
                     </a>
@@ -71,7 +71,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
-                        <svg class="benefits-icon" width="64" ; height="64" ;>
+                        <svg class="benefits-icon" width="64" height="64">
                             <use href="/images/icons.svg#icon-diligence-icon"></use>
                         </svg>
                     </a>
@@ -82,7 +82,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                     <a href="" class="benefits-link">
-                        <svg class="benefits-icon" width="64" ; height="64" ;>
+                        <svg class="benefits-icon" width="64" height="64">
                             <use href="/images/icons.svg#icon-tech-icon"></use>
                         </svg>
                     </a>
