--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                         <svg class="benefits-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-strategy-icon"></use>
+                            <use href="./images/icons.svg#icon-strategy-icon"></use>
                         </svg>
                     </div>
                     <h3 class="item-title-benefits">Strategy</h3>
@@ -58,7 +58,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                         <svg class="benefits-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-punctuality-icon"></use>
+                            <use href="./images/icons.svg#icon-punctuality-icon"></use>
                         </svg>
                     </div>
                     <h3 class="item-title-benefits">Punctuality</h3>
@@ -67,7 +67,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                         <svg class="benefits-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-diligence-icon"></use>
+                            <use href="./images/icons.svg#icon-diligence-icon"></use>
                         </svg>
                 </div>
                     <h3 class="item-title-benefits">Diligence</h3>
@@ -76,7 +76,7 @@
                 <li class="menu-item-benefits">
                     <div class="benefits-container-icon">
                         <svg class="benefits-icon" width="64" height="64">
-                            <use href="/images/icons.svg#icon-tech-icon"></use>
+                            <use href="./images/icons.svg#icon-tech-icon"></use>
                         </svg>
                     </div>
                     <h3 class="item-title-benefits">Technologies</h3>
